workspace-sf/force-app/main/default/objects/GrupoRiscoGarantia__c/GrupoRiscoGarantia__c.object-meta.xml
<CustomObject>
    <label>Grupo de Risco da Garantia</label>
    <nameField>
        <label>Nome do Grupo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grupos de Risco da Garantia</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>