workspace-sf/force-app/main/default/objects/GrupoRiscoGarantia__c/fields/CodigoProduto__c.field-meta.xml
<CustomField>
    <fullName>CodigoProduto__c</fullName>
    <formula>GarantiaProduto__r.Produto__r.ProductCode</formula>
    <label>Código do Produto</label>
    <type>Text</type>
</CustomField>