workspace-sf/force-app/main/default/objects/GrupoRiscoGarantia__c/fields/GarantiaProduto__c.field-meta.xml
<CustomField>
    <fullName>GarantiaProduto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia do produto</label>
    <referenceTo>GarantiaProduto__c</referenceTo>
    <relationshipLabel>Grupos de Risco da Garantia</relationshipLabel>
    <relationshipName>GruposRiscoGarantia</relationshipName>
    <type>Lookup</type>
</CustomField>