workspace-sf/force-app/main/default/objects/GrupoRiscoGarantia__c/fields/GrupoRisco__c.field-meta.xml
<CustomField>
    <fullName>GrupoRisco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Risco</label>
    <referenceTo>GrupoRisco__c</referenceTo>
    <relationshipLabel>Grupos de Risco da Garantia</relationshipLabel>
    <relationshipName>GruposRiscoGarantia</relationshipName>
    <type>Lookup</type>
</CustomField>