workspace-sf/force-app/main/default/objects/GrupoRiscoGarantia__c/fields/SiglaGarantia__c.field-meta.xml
<CustomField>
    <fullName>SiglaGarantia__c</fullName>
    <formula>GarantiaProduto__r.Garantia__r.Sigla__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sigla da Garantia</label>
    <type>Text</type>
</CustomField>