workspace-sf/force-app/main/default/objects/GrupoRiscoGarantia__c/fields/StatusProduto__c.field-meta.xml
<CustomField>
    <fullName>StatusProduto__c</fullName>
    <formula>TEXT(GarantiaProduto__r.Produto__r.Status__c)</formula>
    <label>Status do produto</label>
    <type>Text</type>
</CustomField>