workspace-sf/force-app/main/default/objects/GrupoRiscoGarantia__c/validationRules/ImpedirCriacaoComGarantiaProdTecnico.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedirCriacaoComGarantiaProdTecnico</fullName>
    <active>true</active>
    <description>Impedir criação do Grupo de Risco da Garantia utilizando garantia do produto técnico.</description>
    <errorConditionFormula>AND(
				GarantiaProduto__c &lt;&gt; null,
				GarantiaProduto__r.RecordType.DeveloperName = &apos;ProdutoTecnico&apos;
)</errorConditionFormula>
    <errorDisplayField>GarantiaProduto__c</errorDisplayField>
    <errorMessage>Não é permitido criar um grupo de risco da garantia utilizando uma garantia de produto técnico.</errorMessage>
</ValidationRule>